Initial draws cont.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
         </script>
         <hr>
 
+        <!-- basic, empty canvas with text -->
+        <canvas id="myCanvasText" width="200" height="100" style="border:1px solid #000000;">Your browser does not support the HTML canvas tag.</canvas>
+        <script>
+            drawText();
+        </script>
+        <hr>
+
 
 
     </body>
