Initial draws cont.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
         </script>
         <hr>
 
+        <!-- basic, empty canvas with stroke text -->
+        <canvas id="myCanvasStrokeText" width="200" height="100" style="border:1px solid #000000;">Your browser does not support the HTML canvas tag.</canvas>
+        <script>
+            drawStrokeText();
+        </script>
+        <hr>
+
 
 
     </body>
