Draw .jpg image in canvas

--- a/index.html
+++ b/index.html
@@ -68,5 +68,13 @@
         <p><button onclick="drawImage()">Draw The Scream</button></p>
         <hr>
 
+        <!-- basic, empty canvas with image draw -->
+        <canvas id="myCanvasDrawImageAgain" width="250" height="300" style="border:1px solid #d3d3d3;">Your browser does not support the HTML canvas tag.</canvas>
+        <script>
+            drawImageAgain();
+        </script>
+        <hr>
+
+
     </body>
 </html>
