--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta charset="UTF-8">
         <title>Canvas Play</title>
 
-        <script src="js/canvascript.js"></script>
+        <script type="text/javascript" src="js/canvascript.js"></script>
 
     </head>
 
@@ -59,22 +59,20 @@
         </script>
         <hr>
 
-        <!-- basic, empty canvas with image draw -->
+        <!-- basic, empty canvas with image draw using button-->
         <p>Image to use:</p>
-        <img id="scream" src="https://www.w3schools.com/html/img_the_scream.jpg" alt="The Scream" width="220" height="277">
-        
+        <img id="scream" src="images/the_scream.jpg" alt="The Scream" width="220" height="277">
         <p>Canvas to fill:</p>
         <canvas id="myCanvasDrawImage" width="250" height="300" style="border:1px solid #d3d3d3;">Your browser does not support the HTML canvas tag.</canvas>
         <p><button onclick="drawImage()">Draw The Scream</button></p>
         <hr>
 
-        <!-- basic, empty canvas with image draw -->
-        <canvas id="myCanvasDrawImageAgain" width="250" height="300" style="border:1px solid #d3d3d3;">Your browser does not support the HTML canvas tag.</canvas>
+        <!-- basic, empty canvas with image draw upon DOM render from file -->
+        <canvas id="myCanvasDrawImageAgain" width="250" height="300" style="border:1px solid #d3d3d3;">Your browser does not support the HTML canvas tag.</canvas>        
         <script>
             drawImageAgain();
         </script>
         <hr>
-
 
     </body>
 </html>
