--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
         <title>Canvas Play</title>
 
-        <script type="text/javascript" src="js/canvascript.js"></script>
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
+        <!-- Canvas Play! JS -->
+        <script type="text/javascript" src="js/canvascript.js"></script>
     </head>
 
     <body>
@@ -63,16 +68,21 @@
         <p>Image to use:</p>
         <img id="scream" src="images/the_scream.jpg" alt="The Scream" width="220" height="277">
         <p>Canvas to fill:</p>
-        <canvas id="myCanvasDrawImage" width="250" height="300" style="border:1px solid #d3d3d3;">Your browser does not support the HTML canvas tag.</canvas>
+        <canvas id="myCanvasDrawImage" width="240" height="297" style="border:1px solid #d3d3d3;">Your browser does not support the HTML canvas tag.</canvas>
         <p><button onclick="drawImage()">Draw The Scream</button></p>
         <hr>
 
         <!-- basic, empty canvas with image draw upon DOM render from file -->
-        <canvas id="myCanvasDrawImageAgain" width="250" height="300" style="border:1px solid #d3d3d3;">Your browser does not support the HTML canvas tag.</canvas>        
+        <canvas id="myCanvasDrawImageAgain" width="240" height="297" style="border:1px solid #d3d3d3;">Your browser does not support the HTML canvas tag.</canvas>        
         <script>
             drawImageAgain();
         </script>
         <hr>
 
-    </body>
+
+        <!-- Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+     </body>
 </html>
