--- a/index.html
+++ b/index.html
@@ -21,65 +21,77 @@
 
     <body>
 
-        <h1>Canvas Play!</h1>
-        <hr>
-        <br>
+        <!-- Bootstrap container -->
+        <div class="container">
 
-        <!-- basic, empty canvas-->
-        <canvas id="myCanvas" width="200" height="100" style="border:1px solid #000000;">Your browser does not support the HTML canvas tag.</canvas>
-        <hr>
+            <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                  <h1 class="display-4">Canvas Play!</h1>
+                  <p class="lead">These are fun experiments with the HTML5 Canvas.</p>
+                </div>
+            </div>
 
-        <!-- basic, empty canvas with a diagonal line -->
-        <canvas id="myCanvasDiagonal" width="200" height="100" style="border:1px solid #000000;">Your browser does not support the HTML canvas tag.</canvas>
-        <script>
-            diagonalLine();
-        </script>
-        <hr>
+            <!-- <h1>Canvas Play!</h1> -->
+            <hr>
+            <!-- <br> -->
 
-        <!-- basic, empty canvas with a circle -->
-        <canvas id="myCanvasCircle" width="200" height="100" style="border:1px solid #000000;">Your browser does not support the HTML canvas tag.</canvas>
-        <script>
-            drawCircle();
-        </script>
-        <hr>
+            <!-- basic, empty canvas-->
+            <canvas id="myCanvas" width="200" height="100" style="border:1px solid #000000;">Your browser does not support the HTML canvas tag.</canvas>
+            <hr>
 
-        <!-- basic, empty canvas with text -->
-        <canvas id="myCanvasText" width="200" height="100" style="border:1px solid #000000;">Your browser does not support the HTML canvas tag.</canvas>
-        <script>
-            drawText();
-        </script>
-        <hr>
+            <!-- basic, empty canvas with a diagonal line -->
+            <canvas id="myCanvasDiagonal" width="200" height="100" style="border:1px solid #000000;">Your browser does not support the HTML canvas tag.</canvas>
+            <script>
+                diagonalLine();
+            </script>
+            <hr>
 
-        <!-- basic, empty canvas with stroke text -->
-        <canvas id="myCanvasStrokeText" width="200" height="100" style="border:1px solid #000000;">Your browser does not support the HTML canvas tag.</canvas>
-        <script>
-            drawStrokeText();
-        </script>
-        <hr>
+            <!-- basic, empty canvas with a circle -->
+            <canvas id="myCanvasCircle" width="200" height="100" style="border:1px solid #000000;">Your browser does not support the HTML canvas tag.</canvas>
+            <script>
+                drawCircle();
+            </script>
+            <hr>
 
-        <!-- basic, empty canvas with linear gradient -->
-        <canvas id="myCanvasLinearGradient" width="200" height="100" style="border:1px solid #000000;">Your browser does not support the HTML canvas tag.</canvas>
-        <script>
-            drawLinearGradient();
-        </script>
-        <hr>
+            <!-- basic, empty canvas with text -->
+            <canvas id="myCanvasText" width="200" height="100" style="border:1px solid #000000;">Your browser does not support the HTML canvas tag.</canvas>
+            <script>
+                drawText();
+            </script>
+            <hr>
 
-        <!-- basic, empty canvas with image draw using button-->
-        <p>Image to use:</p>
-        <img id="scream" src="images/the_scream.jpg" alt="The Scream" width="220" height="277">
-        <p>Canvas to fill:</p>
-        <canvas id="myCanvasDrawImage" width="240" height="297" style="border:1px solid #d3d3d3;">Your browser does not support the HTML canvas tag.</canvas>
-        <p><button onclick="drawImage()">Draw The Scream</button></p>
-        <hr>
+            <!-- basic, empty canvas with stroke text -->
+            <canvas id="myCanvasStrokeText" width="200" height="100" style="border:1px solid #000000;">Your browser does not support the HTML canvas tag.</canvas>
+            <script>
+                drawStrokeText();
+            </script>
+            <hr>
 
-        <!-- basic, empty canvas with image draw upon DOM render from file -->
-        <canvas id="myCanvasDrawImageAgain" width="240" height="297" style="border:1px solid #d3d3d3;">Your browser does not support the HTML canvas tag.</canvas>        
-        <script>
-            drawImageAgain();
-        </script>
-        <hr>
+            <!-- basic, empty canvas with linear gradient -->
+            <canvas id="myCanvasLinearGradient" width="200" height="100" style="border:1px solid #000000;">Your browser does not support the HTML canvas tag.</canvas>
+            <script>
+                drawLinearGradient();
+            </script>
+            <hr>
 
+            <!-- basic, empty canvas with image draw using button-->
+            <p>Image to use:</p>
+            <img id="scream" src="images/the_scream.jpg" alt="The Scream" width="220" height="277">
+            <p>Canvas to fill:</p>
+            <canvas id="myCanvasDrawImage" width="240" height="297" style="border:1px solid #d3d3d3;">Your browser does not support the HTML canvas tag.</canvas>
+            <p><button onclick="drawImage()">Draw The Scream</button></p>
+            <hr>
 
+            <!-- basic, empty canvas with image draw upon DOM render from file -->
+            <canvas id="myCanvasDrawImageAgain" width="240" height="297" style="border:1px solid #d3d3d3;">Your browser does not support the HTML canvas tag.</canvas>        
+            <script>
+                drawImageAgain();
+            </script>
+            <hr>
+
+        <!-- End Bootstrap container -->
+        </div>
+        
         <!-- Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
