--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="jumbotron jumbotron-fluid">
                 <div class="container">
                   <h1 class="display-4">Canvas Play!</h1>
-                  <p class="lead">These are fun experiments with the HTML5 Canvas.</p>
+                  <p class="lead">These are fun experiments with the HTML5 Canvas element.</p>
                 </div>
             </div>
             <hr>
